deployment/example/env-vars.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle-api
spec:
  template:
    spec:
      containers:
        - name: moodle-api
